# arc.bot

./: LICENSE  README.md
arc-bot/: README.md  pyproject.toml
arc-bot/arc_bot/plugins/broadcast_over_groups/: __init__.py  broadcast.py  config.py  database.py
